3dt 0.4.0:

- Simple tiling properties are now displayed first before rendering the tiling.
- The 'Dualize' and 'Max. Symmetry' actions now refuse to produce duplicates.
- Unnamed tilings now receive default names of the form '#<n>'.
- An arbitrary viewing direction can now be specified via a dialog box.
- Users can now set the step size for rotations via the arrow keys.
- Changed the maximum level of surface detail to 4 (previously 3).

- The color pickers in the option dialogs no longer ignore the current colors.
- In "Open" and "Save" actions, full file names are now remembered.
- If no creasing is applied, edges now have constant width.
- Some basic info on each tiling is now saved in .ds files.
- I/O paths and other interface attributes are no longer stored in scene files.
- The "Fill Space" pane (formerly "Unit Cells") can now work additively.
- Added the ability to blend edge and tile colors.
- For files with multiple tilings, the user now selects which to show first.
- Improved the layout for the option dialogs.
- A disabled unit cell no longer creeps up when reembedding.
- A dialog is now shown before writing over an existing file.
- All recoloring dialogs now show the current color as the default.
- Changed filter settings for Sunflow (raytracer) to obtain crisper images.
- Brought back the Sunflow preview option.
- All net nodes now re-use the same geometry, thus saving process memory.
- The controls window is positioned better with regard to the viewer.
- The viewer size is now remembered between program runs.
- Added keyboard controlled rotations (left, right, up, down etc.)
- Restructured the "File" menu for easier image export.
- The underlying net of a tiling can now be displayed.
- BUG FIX: unit cell now shows up in Sunflow renders with small field of view.

3dt 0.3.2:

- For fitting the scene to the window, the '0' is now used instead of 'E'.
- The range of unit cell copies to display can now be specified interactively.